Fix navigation animation on iOS
 - Animate from 99% instead seems to ensure the animation happens

--- a/site/sass/components/_navigation.scss
+++ b/site/sass/components/_navigation.scss
@@ -23,7 +23,7 @@
         transform: translate3d(0%, 0%, 0);
 
         &-setup {
-            transform: translate3d(100%, 0%, 0);
+            transform: translate3d(99%, 0%, 0);
             transition-duration: 0ms;
             transition-delay: 0ms;
         }
